- Add ability to add sampe books and clear library - Improve namings and design

--- a/src/components/selected-books/selected-books.css
+++ b/src/components/selected-books/selected-books.css
@@ -10,3 +10,11 @@
 .generate-link{
     text-align: center;
 }
+
+.selected-books button.remove-all{
+    padding: 0;
+    text-decoration: none;
+    float: right;
+    font-size: 1.8rem;
+    line-height: 1.5rem;
+}
